--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <a href="rodzinny-premiere.html">Rodzinny Pokój Premiere z Balkonem</a>
 </li>
 <li class="menu-item " data-size="60">
-<a href="http://localhost:8000/pokoje/dwuosobowy-deluxe">Dwuusobowy Pokój Deluxe z Balkonem</a>
+<a href="dwuosobowy-deluxe.html">Dwuusobowy Pokój Deluxe z Balkonem</a>
 </li>
 </ul>
 </li>
@@ -127,7 +127,7 @@
                                 height="40"
                             />
                         </a>
-                        <a class="hotale-orig-logo" href="http://localhost:8000">
+                        <a class="hotale-orig-logo" href="index.html">
                             <img
                                 src="dist/img/assets/logo.png"
                                 alt="logo Owce Dwie"
@@ -212,7 +212,7 @@ data-navigation-offset="75">
 <a href="rodzinny-premiere.html">Rodzinny Pokój Premiere z Balkonem</a>
 </li>
 <li class="menu-item " data-size="60">
-<a href="http://localhost:8000/pokoje/dwuosobowy-deluxe">Dwuusobowy Pokój Deluxe z Balkonem</a>
+<a href="dwuosobowy-deluxe.html">Dwuusobowy Pokój Deluxe z Balkonem</a>
 </li>
 </ul>
 </li>
@@ -1283,7 +1283,7 @@ id="gdlr-core-wrapper-1">
     <div class="footer__container">
         <div class="footer__logo-section">
             <div class="footer__logo">
-                <img src="http://localhost:8000/assets/logo.png" alt="">
+                <img src="dist/img/assets/logo.png" alt="logo Owce Dwie">
             </div>
             <div class="footer__social">
                 <a href="#" target="_blank" class="hotale-top-bar-social-icon" title="facebook">
