add other pages

--- a/rodzinny-deluxe.html
+++ b/rodzinny-deluxe.html
@@ -190,7 +190,7 @@ data-navigation-offset="75">
 
 <div class="hotale-main-menu-right-wrap clearfix hotale-item-mglr hotale-navigation-top nav--logo" style="left:0;top:-15px;display:none">
 <div class="tourmaster-room-navigation-checkout-wrap">
-<img src="dist/img/assets/logo--dark.png" alt="" width="160px"  >
+<a href="index.html"><img src="dist/img/assets/logo--dark.png" alt="" width="160px"  ></a>
 
 </div>
 </div>
