--- a/atrakcje.html
+++ b/atrakcje.html
@@ -37,6 +37,16 @@
     href="https://fonts.googleapis.com/css?family=Jost%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900%2C100italic%2C200italic%2C300italic%2Citalic%2C500italic%2C600italic%2C700italic%2C800italic%2C900italic%7CAmiri%3Aregular%2Citalic%2C700%2C700italic%7CAllison%3Aregular&#038;subset=cyrillic%2Clatin%2Clatin-ext%2Carabic%2Cvietnamese&#038;ver=6.0.1"
     type="text/css" media="all" />
 
+<!--FAVICONS-->
+    <link rel="apple-touch-icon" sizes="180x180" href="dist/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="dist/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="dist/favicons/favicon-16x16.png">
+    <link rel="manifest" href="dist/favicons/site.webmanifest">
+    <link rel="mask-icon" href="dist/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#000000">
+
+
 
 <!--OWN CSS-->
 <link rel="stylesheet" href="dist/css/app.min.css">
@@ -635,6 +645,19 @@ Zarezerwuj<span class="tourmaster-count">0</span>
     </div>
     </div>
 </footer>
+
+     <div class="cookie-bar " style="z-index: 10000;" id="cookieBox">
+    <div class="cookie-bar__container">
+
+        <p >Ta witryna używa plików cookie, aby zapewnić Ci najlepsze doświadczenie podczas korzystania z naszej platformy. Kontynuując przeglądanie naszej witryny, wyrażasz zgodę na korzystanie z plików cookie.</p>
+            <div class="cookie-bar__actions">
+                <a href="" target="_blank">Dowiedz się więcej</a>
+               <button id="acceptBtn">OK</button>
+            </div>
+        </div>
+</div>
+            
+
             
 <script type="text/javascript" src="js/jquery.min.js?ver=3.6.0" id="jquery-core-js"></script>
 <script type="text/javascript" src="js/jquery-migrate.min.js?ver=3.3.2" id="jquery-migrate-js"></script>
