--- a/rodzinny-deluxe.html
+++ b/rodzinny-deluxe.html
@@ -1091,7 +1091,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
     <div class="footer__container">
         <div class="footer__logo-section">
             <div class="footer__logo">
-                <img src="dist/img/assets/logo.png" alt="logo Owce Dwie">
+                <a href="index.html">
+                <img src="dist/img/assets/logo.png" alt="logo Owce Dwie"></a>
             </div>
             <div class="footer__social">
                 <a href="#" target="_blank" class="hotale-top-bar-social-icon" title="facebook">
@@ -1127,7 +1128,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
 
     </div>
     <div class="footer__author">
-        <span>©<span class="footer__year"></span> Dwie Owce</span>
+        <span>©<span class="footer__year"></span> Owce Dwie</span>
         <span>Wykonanie <a href="https://marketingmix.pl" target="_blank">MarketingMix</a></span>
     </div>
     </div>
