update main page

--- a/index.html
+++ b/index.html
@@ -258,13 +258,12 @@ Zarezerwuj<span class="tourmaster-count">0</span>
             <div class="hotale-page-wrapper" id="hotale-page-wrapper">
                 <div class="gdlr-core-page-builder-body">
 
-
                     <div class="gdlr-core-pbf-wrapper hero__container" style="margin: 0px 0px 0px 0px; padding: 200px 0px 150px 0px;"
 id="gdlr-core-wrapper-1">
 
 <div class="gdlr-core-pbf-background-wrap">
     <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js hero__background"
-        style="background-image: url('dist/img/assets/images/owce-dwie_34.webp'); background-size: cover; "
+        style="background-image: url('dist/img/assets/images/rodzinny-deluxe--webp/rodzinny-deluxe_7.webp'); background-size: cover; "
         data-parallax-speed="0">
     </div>
     <div class="overlay"></div>
@@ -303,13 +302,12 @@ id="gdlr-core-wrapper-1">
     </div>
 </div>
 </div>
-
                     <div class="gdlr-core-pbf-wrapper rooms-container" style="padding: 90px 0px 30px 0px;">
     <div class="gdlr-core-pbf-background-wrap"></div>
     <div class="gdlr-core-pbf-background-wrap" style="top: 155px;">
-        <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
+        <!-- <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
             style="background-image: url(upload/hotel-room-bg.png); background-repeat: no-repeat; background-position: top center;"
-            data-parallax-speed="0"></div>
+            data-parallax-speed="0"></div> -->
     </div>
     <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
 
@@ -380,8 +378,8 @@ id="gdlr-core-wrapper-1">
                                                     <div
                                                         class="tourmaster-room-thumbnail tourmaster-media-image gdlr-core-outer-frame-element">
                                                         <a href="rodzinny-deluxe.html">
-                                                            <img src="dist/img/assets/images/owce-dwie_4.webp"
-                                                                alt="hotel room miniature" width="780" height="595" />
+                                                            <img src="dist/img/assets/images/rodzinny-deluxe--webp/rodzinny-deluxe_8.webp"
+                                                                alt="pokój rodzinny typu deluxe z balkonem" width="780" height="595" loading="lazy" class="room-img"/>
                                                         </a>
                                                     </div>
                                                     <div class="tourmaster-room-content-wrap gdlr-core-skin-e-background gdlr-core-js"
@@ -422,8 +420,8 @@ id="gdlr-core-wrapper-1">
                                                     <div
                                                         class="tourmaster-room-thumbnail tourmaster-media-image gdlr-core-outer-frame-element">
                                                         <a href="rodzinny-premiere.html">
-                                                            <img src="dist/img/assets/images/owce-dwie_24.webp"
-                                                                alt="hotel room miniature" width="780" height="595" />
+                                                            <img src="dist/img/assets/images/rodzinny-premiere--webp/rodzinny-premiere_6.webp"
+                                                                alt="pokój rodzinny typu premiere z balkonem" width="780" height="595" loading="lazy" class="room-img"/>
                                                         </a>
                                                     </div>
                                                     <div class="tourmaster-room-content-wrap gdlr-core-skin-e-background gdlr-core-js"
@@ -464,8 +462,8 @@ id="gdlr-core-wrapper-1">
                                                     <div
                                                         class="tourmaster-room-thumbnail tourmaster-media-image gdlr-core-outer-frame-element">
                                                         <a href="dwuosobowy-deluxe.html">
-                                                            <img src="dist/img/assets/images/owce-dwie_4.webp"
-                                                                alt="hotel room miniature" width="780" height="595" />
+                                                            <img src="dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_1.webp"
+                                                                alt="hotel room miniature" width="780" height="595" loading="lazy" class="room-img"/>
                                                         </a>
                                                     </div>
                                                     <div class="tourmaster-room-content-wrap gdlr-core-skin-e-background gdlr-core-js"
@@ -512,7 +510,6 @@ id="gdlr-core-wrapper-1">
 
     </div>
 </div>
-
                     <div class="gdlr-core-pbf-wrapper attractions-container" id="gdlr-core-wrapper-2">
     <div class="gdlr-core-pbf-background-wrap"></div>
     <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
@@ -697,9 +694,9 @@ id="gdlr-core-wrapper-1">
                     <div class="gdlr-core-pbf-wrapper cta-container" style="padding: 50px 0px 70px 0px;"
                         id="gdlr-core-wrapper-3">
                         <div class="gdlr-core-pbf-background-wrap" style="background-color: #f6f6f6;">
-                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
+                            <!-- <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                                 style="background-image: url(upload/hotel-about-bg.png); background-repeat: no-repeat; background-position: top center;"
-                                data-parallax-speed="0"></div>
+                                data-parallax-speed="0"></div> -->
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
 
@@ -738,7 +735,7 @@ id="gdlr-core-wrapper-1">
                                                     style="padding-bottom: 22px;">
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-size: 20px; text-transform: none; color: #94959b;">
-                                                        <p>Willa <strong>Owce Dwie</strong> to niezwykłe miejsce, w którym tradycja
+                                                        <p>Willa <strong >Owce Dwie</strong> to niezwykłe miejsce, w którym tradycja
                                                             spotyka się z nowoczesnością, tworząc atmosferę pełną
                                                             komfortu i relaksu. Położona w otoczeniu szlaków, tuż obok
                                                             Skoczni, willa oferuje niezapomniane widoki, które zaspokoją
@@ -766,8 +763,8 @@ id="gdlr-core-wrapper-1">
                                                     class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-center-align gdlr-core-item-pdlr">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-rectangle"
                                                         style="border-width: 0px;">
-                                                        <img src="dist/img/assets/images/owce-dwie_2.webp"
-                                                            alt="" width="570" height="450"
+                                                        <img src="../../../dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_2.webp"
+                                                            alt="pokój willi OwceDwie" width="570" height="450"
                                                             title="zdjecie pokoju"
                                                             style="max-height:600px;object-fit:cover" />
                                                     </div>
@@ -786,7 +783,7 @@ id="gdlr-core-wrapper-1">
         <div class="gdlr-core-pbf-wrapper" style="margin: 0px 0px 0px 0px; padding: 130px 0px 90px 0px;">
     <div class="gdlr-core-pbf-background-wrap" style="background-color: #0a0a0a;">
         <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-            style="opacity: 0.6; background-image: url('dist/img/assets/images/owce-dwie_34.webp'); background-size: cover; background-position: center;"
+            style="opacity: 0.6; background-image: url('../../../dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_4.webp'); background-size: cover; background-position: center;"
             data-parallax-speed="0"></div>
     </div>
     <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
@@ -1283,11 +1280,7 @@ id="gdlr-core-wrapper-1">
         </div>
     </div>
 </div>
-
-
-
     </div>
-
 
     <footer class="footer">
     <div class="footer__container">
@@ -1346,7 +1339,6 @@ id="gdlr-core-wrapper-1">
             </div>
         </div>
 </div>
-
     
 <script type="text/javascript" src="js/jquery.min.js?ver=3.6.0" id="jquery-core-js"></script>
 <script type="text/javascript" src="js/jquery-migrate.min.js?ver=3.3.2" id="jquery-migrate-js"></script>
@@ -1419,6 +1411,7 @@ id="gdlr-core-wrapper-1">
 <script type="text/javascript" src="js/plugins/goodlayers-core/include/js/page-builder.js?ver=1.3.9" id="gdlr-core-page-builder-js"></script>
 
 
-<script src="dist/js/main.min.js"></script></body>
+<script src="dist/js/main.min.js"></script>    
+</body>
 
 </html>
