--- a/kontakt.html
+++ b/kontakt.html
@@ -519,13 +519,16 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                         
 
             
-                        <iframe style="width:100%; height:500px; border:0; margin-bottom: -9px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d414.61940634415373!2d19.970185078942254!3d49.28557699148096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4715f2e9d562792d%3A0x400c0e831ff80b00!2sZwierzyniecka%209%2C%2034-500%20Zakopane!5e0!3m2!1spl!2spl!4v1702040642968!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe style="width:100%; height:500px; border:0; margin-bottom: -9px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.5112096209623!2d19.967549977592544!3d49.28565847139337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4715f325ce5f71ef%3A0xbaa57cd60b59c57!2sOwce%20Dwie!5e0!3m2!1spl!2spl!4v1704449567274!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
+
     <footer class="footer">
     <div class="footer__container">
         <div class="footer__logo-section">
