update rooms page

--- a/pokoje.html
+++ b/pokoje.html
@@ -282,7 +282,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                     style="border-width: 1px 1px 1px 1px; border-color: #e5e5e5;">
                                     <div class="tourmaster-room-thumbnail tourmaster-media-image">
                                         <a href="rodzinny-deluxe.html">
-                                            <img src="dist/img/assets/images/owce-dwie_26.webp" alt=""
+                                            <img src="dist/img/assets/images/rodzinny-deluxe--webp/rodzinny-deluxe_7.webp" alt="Rodzinny Pokój Deluxe
+                                            z Balkonem w willi Owce Dwie" loading="lazy"
                                                 width="780" height="595" />
                                         </a>
                                     </div>
@@ -299,8 +300,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                                     os.</span></div>
 
                                         </div>
-                                        <div class="tourmaster-room-content">Lorem ipsum dolor sit amet consectetur
-                                            adipiscing elit platea ante curae, cras ad ac nisi aenean</div>
+                                        <div class="tourmaster-room-content">Wyposażony jest w dwuosobowe łóżko, rozkładaną sofę, szafę, biurko, tv, sejf i łazienkę z prysznicem.</div>
                                         <div class="tourmaster-bottom">
                                             <a class="tourmaster-read-more tourmaster-type-text"
                                                 href="rodzinny-deluxe.html">Zobacz<i
@@ -319,7 +319,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                     style="border-width: 1px 1px 1px 1px; border-color: #e5e5e5;">
                                     <div class="tourmaster-room-thumbnail tourmaster-media-image">
                                         <a href="rodzinny-premiere.html">
-                                            <img src="dist/img/assets/images/owce-dwie_4.webp" alt=""
+                                            <img src="../../../dist/img/assets/images/rodzinny-premiere--webp/rodzinny-premiere_6.webp" alt="Rodzinny Pokój
+                                            Premiere z Balkonem w willi Owce Dwie" loading="lazy"
                                                 width="780" height="595" />
                                         </a>
                                     </div>
@@ -336,8 +337,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                                     os.</span></div>
 
                                         </div>
-                                        <div class="tourmaster-room-content">Lorem ipsum dolor sit amet consectetur
-                                            adipiscing elit platea ante curae, cras ad ac nisi aenean</div>
+                                        <div class="tourmaster-room-content">Wyposażony jest w dwuosobowe łóżko, rozkładaną sofę, szafę, biurko, tv, sejf i łazienkę z prysznicem.</div>
                                         <div class="tourmaster-bottom">
                                             <a class="tourmaster-read-more tourmaster-type-text"
                                                 href="rodzinny-premiere.html">Zobacz<i
@@ -355,7 +355,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                     style="border-width: 1px 1px 1px 1px; border-color: #e5e5e5;">
                                     <div class="tourmaster-room-thumbnail tourmaster-media-image">
                                         <a href="dwuosobowy-deluxe.html">
-                                            <img src="dist/img/assets/images/owce-dwie_26.webp" alt=""
+                                            <img src="dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_1.webp" alt="Dwuosobowy Pokój Deluxe z Balkonem w willi Owce Dwie" loading="lazy"
                                                 width="780" height="595" />
                                         </a>
                                     </div>
@@ -371,8 +371,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                                     os.</span></div>
 
                                         </div>
-                                        <div class="tourmaster-room-content">Lorem ipsum dolor sit amet consectetur
-                                            adipiscing elit platea ante curae, cras ad ac nisi aenean</div>
+                                        <div class="tourmaster-room-content">Wyposażony jest w dwuosobowe łóżko, szafę, biurko, tv, sejf i łazienkę z prysznicem.
+                                        </div>
                                         <div class="tourmaster-bottom">
                                             <a class="tourmaster-read-more tourmaster-type-text"
                                                 href="dwuosobowy-deluxe.html">Zobacz<i
