update all single pages of rooms

--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ id="gdlr-core-wrapper-1">
                                                     class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-center-align gdlr-core-item-pdlr">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-rectangle"
                                                         style="border-width: 0px;">
-                                                        <img src="../../../dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_2.webp"
+                                                        <img src="dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_2.webp"
                                                             alt="pokój willi OwceDwie" width="570" height="450"
                                                             title="zdjecie pokoju"
                                                             style="max-height:600px;object-fit:cover" />
