--- a/pokoje.html
+++ b/pokoje.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj</title>
+    <title>Nasze Pokoje | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj</title>
     <meta name="description" content="Willa &quot;Owce Dwie&quot; to niezwykłe miejsce, w którym tradycja spotyka się z nowoczesnością, tworząc atmosferę pełną komfortu i relaksu. ">
 
 
