--- a/kontakt.html
+++ b/kontakt.html
@@ -307,7 +307,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="gdlr-core-pbf-element">
+                                    <!-- <div class="gdlr-core-pbf-element">
                                         <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                             style="padding-bottom: 0px;">
                                             <div class="gdlr-core-text-box-item-content"
@@ -316,14 +316,14 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                                     cras,</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="gdlr-core-pbf-element">
                                         <div
                                             class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                             <div class="gdlr-core-text-box-item-content"
-                                                style="font-weight: 700; text-transform: none;">
+                                                style="font-weight: 700; text-transform: none; text-align: center;">
                                                 <p><a style="text-decoration: underline; color:white;text-decoration:none;"
-                                                        href="#">+48 533 533 533</a></p>
+                                                        href="tel:+48696770000">+48 696 770 000</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -361,7 +361,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="gdlr-core-pbf-element">
+                                    <!-- <div class="gdlr-core-pbf-element">
                                         <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                             style="padding-bottom: 0px;">
                                             <div class="gdlr-core-text-box-item-content"
@@ -370,14 +370,14 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                                     cras,</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="gdlr-core-pbf-element">
                                         <div
                                             class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                             <div class="gdlr-core-text-box-item-content"
-                                                style="font-weight: 700; text-transform: none;">
+                                                style="font-weight: 700; text-transform: none;text-align:center">
                                                 <p><a style="text-decoration: underline; color:white;text-decoration:none"
-                                                        href="#">test@gmail.com</a></p>
+                                                        href="mailto:hello@owcedwie.pl">hello@owcedwie.pl</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -415,7 +415,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="gdlr-core-pbf-element">
+                                    <!-- <div class="gdlr-core-pbf-element">
                                         <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                             style="padding-bottom: 0px;">
                                             <div class="gdlr-core-text-box-item-content"
@@ -424,14 +424,14 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                                     cras,</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="gdlr-core-pbf-element">
                                         <div
                                             class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                             <div class="gdlr-core-text-box-item-content"
-                                                style="font-weight: 700; text-transform: none;">
+                                                style="font-weight: 700; text-transform: none;text-align:center">
                                                 <p><a style="text-decoration: underline; color:white;text-decoration:none"
-                                                        href="#">Zobacz na mapie</a></p>
+                                                        href="https://maps.app.goo.gl/9XfKBsEPM67eNimQ6">zobacz na mapie</a></p>
                                             </div>
                                         </div>
                                     </div>
