fix bugs with source

--- a/o-nas.html
+++ b/o-nas.html
@@ -343,7 +343,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     style="padding-bottom: 0px;">
                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-round"
                         style="border-width: 0px;">
-                        <img src="../dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_2.webp" alt="wnętrze pokoju w willi Owce Dwie" width="1300" height="716" loading="lazy"
+                        <img src="dist/img/assets/images/dwuosobowy-deluxe--webp/dwuosobowy-deluxe_2.webp" alt="wnętrze pokoju w willi Owce Dwie" width="1300" height="716" loading="lazy"
                             style="max-height:500px;object-fit:cover" />
                     </div>
                 </div>
