--- a/pokoje.html
+++ b/pokoje.html
@@ -319,7 +319,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                     style="border-width: 1px 1px 1px 1px; border-color: #e5e5e5;">
                                     <div class="tourmaster-room-thumbnail tourmaster-media-image">
                                         <a href="rodzinny-premiere.html">
-                                            <img src="../../../dist/img/assets/images/rodzinny-premiere--webp/rodzinny-premiere_6.webp" alt="Rodzinny Pokój
+                                            <img src="dist/img/assets/images/rodzinny-premiere--webp/rodzinny-premiere_6.webp" alt="Rodzinny Pokój
                                             Premiere z Balkonem w willi Owce Dwie" loading="lazy"
                                                 width="780" height="595" />
                                         </a>
