translate nav and header

--- a/rodzinny-premiere.html
+++ b/rodzinny-premiere.html
@@ -84,27 +84,27 @@
                     <div class="hotale-mm-menu-wrap hotale-navigation-font" id="hotale-mobile-menu" data-slide="right" >
                         
                         <ul id="menu-main-navigation" class="m-menu">
-                           <li class="menu-ite hotale-normal-menu"><a href="o-nas.html">O nas</a></li>
+                           <li class="menu-ite hotale-normal-menu"><a href="o-nas.html" data-i18n="nav-link--1"></a></li>
 <li class="menu-item menu-item-has-children hotale-normal-menu">
-<a href="pokoje.html" class="sf-with-ul-pre test ">Pokoje</a>
-<ul class="sub-menu">
-<li class="menu-item " data-size="60">
-<a href="rodzinny-deluxe.html">Rodzinny Pokój Deluxe z Balkonem</a>
+    <a href="pokoje.html" class="sf-with-ul-pre test "data-i18n="nav-link--2"></a>
+    <ul class="sub-menu">
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-deluxe.html" data-i18n="room-1"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-premiere.html" data-i18n="room-2"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="dwuosobowy-deluxe.html" data-i18n="room-3"></a>
+        </li>
+    </ul>
 </li>
-<li class="menu-item " data-size="60">
-<a href="rodzinny-premiere.html">Rodzinny Pokój Premiere z Balkonem</a>
-</li>
-<li class="menu-item " data-size="60">
-<a href="dwuosobowy-deluxe.html">Dwuusobowy Pokój Deluxe z Balkonem</a>
-</li>
-</ul>
-</li>
-<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html">Atrakcje</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html" data-i18n="nav-link--3"></a></li>
 
-<li class="menu-ite hotale-normal-menu" ><a href="galeria.html" >Galeria</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="galeria.html" data-i18n="nav-link--4"></a></li>
 
 
-<li class="menu-ite hotale-normal-menu"><a href="kontakt.html">Kontakt</a></li>                           <!-- <li class="menu-ite hotale-normal-menu" ><a href="#" >Rezerwacja</a></li> -->
+<li class="menu-ite hotale-normal-menu"><a href="kontakt.html" data-i18n="nav-link--5"></a></li>                           <!-- <li class="menu-ite hotale-normal-menu" ><a href="#" >Rezerwacja</a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -213,27 +213,27 @@
                 <div class="hotale-main-menu" id="hotale-main-menu">
                     <ul id="menu-main-navigation-1" class="sf-menu">
 
-                        <li class="menu-ite hotale-normal-menu"><a href="o-nas.html">O nas</a></li>
+                        <li class="menu-ite hotale-normal-menu"><a href="o-nas.html" data-i18n="nav-link--1"></a></li>
 <li class="menu-item menu-item-has-children hotale-normal-menu">
-<a href="pokoje.html" class="sf-with-ul-pre test ">Pokoje</a>
-<ul class="sub-menu">
-<li class="menu-item " data-size="60">
-<a href="rodzinny-deluxe.html">Rodzinny Pokój Deluxe z Balkonem</a>
+    <a href="pokoje.html" class="sf-with-ul-pre test "data-i18n="nav-link--2"></a>
+    <ul class="sub-menu">
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-deluxe.html" data-i18n="room-1"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-premiere.html" data-i18n="room-2"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="dwuosobowy-deluxe.html" data-i18n="room-3"></a>
+        </li>
+    </ul>
 </li>
-<li class="menu-item " data-size="60">
-<a href="rodzinny-premiere.html">Rodzinny Pokój Premiere z Balkonem</a>
-</li>
-<li class="menu-item " data-size="60">
-<a href="dwuosobowy-deluxe.html">Dwuusobowy Pokój Deluxe z Balkonem</a>
-</li>
-</ul>
-</li>
-<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html">Atrakcje</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html" data-i18n="nav-link--3"></a></li>
 
-<li class="menu-ite hotale-normal-menu" ><a href="galeria.html" >Galeria</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="galeria.html" data-i18n="nav-link--4"></a></li>
 
 
-<li class="menu-ite hotale-normal-menu"><a href="kontakt.html">Kontakt</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="kontakt.html" data-i18n="nav-link--5"></a></li>
                     </ul>
                     <div class="hotale-navigation-slide-bar hotale-navigation-slide-bar-style-2 hotale-left"
                         data-size-offset="0" data-width="19px" id="hotale-navigation-slide-bar"></div>
