--- a/index.html
+++ b/index.html
@@ -85,27 +85,27 @@
                     <div class="hotale-mm-menu-wrap hotale-navigation-font" id="hotale-mobile-menu" data-slide="right" >
                         
                         <ul id="menu-main-navigation" class="m-menu">
-                           <li class="menu-ite hotale-normal-menu"><a href="o-nas.html">O nas</a></li>
+                           <li class="menu-ite hotale-normal-menu"><a href="o-nas.html" data-i18n="nav-link--1"></a></li>
 <li class="menu-item menu-item-has-children hotale-normal-menu">
-<a href="pokoje.html" class="sf-with-ul-pre test ">Pokoje</a>
-<ul class="sub-menu">
-<li class="menu-item " data-size="60">
-<a href="rodzinny-deluxe.html">Rodzinny Pokój Deluxe z Balkonem</a>
+    <a href="pokoje.html" class="sf-with-ul-pre test "data-i18n="nav-link--2"></a>
+    <ul class="sub-menu">
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-deluxe.html" data-i18n="room-1"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-premiere.html" data-i18n="room-2"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="dwuosobowy-deluxe.html" data-i18n="room-3"></a>
+        </li>
+    </ul>
 </li>
-<li class="menu-item " data-size="60">
-<a href="rodzinny-premiere.html">Rodzinny Pokój Premiere z Balkonem</a>
-</li>
-<li class="menu-item " data-size="60">
-<a href="dwuosobowy-deluxe.html">Dwuusobowy Pokój Deluxe z Balkonem</a>
-</li>
-</ul>
-</li>
-<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html">Atrakcje</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html" data-i18n="nav-link--3"></a></li>
 
-<li class="menu-ite hotale-normal-menu" ><a href="galeria.html" >Galeria</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="galeria.html" data-i18n="nav-link--4"></a></li>
 
 
-<li class="menu-ite hotale-normal-menu"><a href="kontakt.html">Kontakt</a></li>                           <!-- <li class="menu-ite hotale-normal-menu" ><a href="#" >Rezerwacja</a></li> -->
+<li class="menu-ite hotale-normal-menu"><a href="kontakt.html" data-i18n="nav-link--5"></a></li>                           <!-- <li class="menu-ite hotale-normal-menu" ><a href="#" >Rezerwacja</a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -213,27 +213,27 @@
                 <div class="hotale-main-menu" id="hotale-main-menu">
                     <ul id="menu-main-navigation-1" class="sf-menu">
 
-                        <li class="menu-ite hotale-normal-menu"><a href="o-nas.html">O nas</a></li>
+                        <li class="menu-ite hotale-normal-menu"><a href="o-nas.html" data-i18n="nav-link--1"></a></li>
 <li class="menu-item menu-item-has-children hotale-normal-menu">
-<a href="pokoje.html" class="sf-with-ul-pre test ">Pokoje</a>
-<ul class="sub-menu">
-<li class="menu-item " data-size="60">
-<a href="rodzinny-deluxe.html">Rodzinny Pokój Deluxe z Balkonem</a>
+    <a href="pokoje.html" class="sf-with-ul-pre test "data-i18n="nav-link--2"></a>
+    <ul class="sub-menu">
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-deluxe.html" data-i18n="room-1"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="rodzinny-premiere.html" data-i18n="room-2"></a>
+        </li>
+        <li class="menu-item " data-size="60">
+            <a href="dwuosobowy-deluxe.html" data-i18n="room-3"></a>
+        </li>
+    </ul>
 </li>
-<li class="menu-item " data-size="60">
-<a href="rodzinny-premiere.html">Rodzinny Pokój Premiere z Balkonem</a>
-</li>
-<li class="menu-item " data-size="60">
-<a href="dwuosobowy-deluxe.html">Dwuusobowy Pokój Deluxe z Balkonem</a>
-</li>
-</ul>
-</li>
-<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html">Atrakcje</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="atrakcje.html" data-i18n="nav-link--3"></a></li>
 
-<li class="menu-ite hotale-normal-menu" ><a href="galeria.html" >Galeria</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="galeria.html" data-i18n="nav-link--4"></a></li>
 
 
-<li class="menu-ite hotale-normal-menu"><a href="kontakt.html">Kontakt</a></li>
+<li class="menu-ite hotale-normal-menu"><a href="kontakt.html" data-i18n="nav-link--5"></a></li>
                     </ul>
                     <div class="hotale-navigation-slide-bar hotale-navigation-slide-bar-style-2 hotale-left"
                         data-size-offset="0" data-width="19px" id="hotale-navigation-slide-bar"></div>
@@ -284,15 +284,17 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                 class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                 <div class="gdlr-core-title-item-title-wrap">
                                     <h3 class="gdlr-core-title-item-title gdlr-core-skin-title class-test"
-                                        style="font-size: 96px; font-weight: 200; letter-spacing: 4px; text-transform: none; color: #ffffff;" ><span data-i18n="welcome_message"></span>
+                                        style="font-size: 96px; font-weight: 200; letter-spacing: 4px; text-transform: none; color: #ffffff;" ><span data-i18n="title"></span>
                                         <span style="font-weight: 500;">Owce Dwie</span><span
                                             class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                     </h3>
                                 </div>
                                 <span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
                                     style="font-size: 37px; font-weight: 300; font-style: normal; letter-spacing: 4px; color: #ffffff;">
-                                    <span style="font-weight: 500;">Twój wymarzony pobyt</span>
-                                    zaczyna się tutaj
+                                    <span style="font-weight: 500;"data-i18n="subtitle-1"> </span><span data-i18n="subtitle-2">
+
+                                    </span>
+                                   
                                 </span>
                             </div>
                         </div>
